New changes to week2

--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -750,8 +750,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d02cce7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_age = age_calc.sample(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "53a5e610",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37166     56\n",
+       "156855    46\n",
+       "16692     28\n",
+       "272532    28\n",
+       "193580    27\n",
+       "103726    28\n",
+       "113164    69\n",
+       "64895     53\n",
+       "103917    45\n",
+       "298297    64\n",
+       "45258     40\n",
+       "54277     26\n",
+       "49215     34\n",
+       "162722    44\n",
+       "103476    24\n",
+       "267639    45\n",
+       "63348     26\n",
+       "26448     39\n",
+       "88752     26\n",
+       "66015     48\n",
+       "226750    80\n",
+       "211117    24\n",
+       "77817     26\n",
+       "60775     25\n",
+       "216705    28\n",
+       "295741    26\n",
+       "7994      64\n",
+       "37949     42\n",
+       "234814    60\n",
+       "21339     50\n",
+       "25571     29\n",
+       "168602    37\n",
+       "113716    42\n",
+       "275634    31\n",
+       "282000    75\n",
+       "5890      24\n",
+       "278609    27\n",
+       "132337    31\n",
+       "150856    62\n",
+       "178782    27\n",
+       "278150    39\n",
+       "174048    22\n",
+       "16611     21\n",
+       "219379    23\n",
+       "69951     39\n",
+       "267273    59\n",
+       "85437     37\n",
+       "260618    64\n",
+       "226821    40\n",
+       "307264    22\n",
+       "Name: Age, dtype: int32"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dc170c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39.44"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_of_sample = sample_age.mean()\n",
+    "mean_of_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c2de7c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7515454932103864"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_btwn_means = mean_of_age - mean_of_sample\n",
+    "diff_btwn_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6c315f7",
    "metadata": {},
    "outputs": [],
    "source": []
