--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "04556860",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,11 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\n        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n    ",
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n",
+       "    "
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -398,13 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "441f1200",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/javascript": "\n        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd\\nimport datetime as dt'); }\n    ",
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import pandas as pd'); }\n",
+       "    "
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -563,7 +571,7 @@
        "4       Saturday, May 13, 2023         0   24  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "58834dc5",
    "metadata": {},
    "outputs": [
@@ -596,7 +604,7 @@
        "Name: Age, Length: 324466, dtype: int32"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "e0e8a8e7",
    "metadata": {},
    "outputs": [
@@ -684,7 +692,7 @@
        "         87: 2})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e511dea1",
    "metadata": {},
    "outputs": [],
@@ -707,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "c768932c",
    "metadata": {},
    "outputs": [
@@ -717,7 +725,7 @@
        "40.191545493210384"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "3a4dcab1",
    "metadata": {},
    "outputs": [
@@ -738,7 +746,7 @@
        "240.033425631723"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "d02cce7e",
    "metadata": {},
    "outputs": [],
@@ -760,67 +768,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "53a5e610",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "37166     56\n",
-       "156855    46\n",
-       "16692     28\n",
-       "272532    28\n",
-       "193580    27\n",
-       "103726    28\n",
-       "113164    69\n",
-       "64895     53\n",
-       "103917    45\n",
-       "298297    64\n",
-       "45258     40\n",
-       "54277     26\n",
-       "49215     34\n",
-       "162722    44\n",
-       "103476    24\n",
-       "267639    45\n",
-       "63348     26\n",
-       "26448     39\n",
-       "88752     26\n",
-       "66015     48\n",
-       "226750    80\n",
-       "211117    24\n",
-       "77817     26\n",
-       "60775     25\n",
-       "216705    28\n",
-       "295741    26\n",
-       "7994      64\n",
-       "37949     42\n",
-       "234814    60\n",
-       "21339     50\n",
-       "25571     29\n",
-       "168602    37\n",
-       "113716    42\n",
-       "275634    31\n",
-       "282000    75\n",
-       "5890      24\n",
-       "278609    27\n",
-       "132337    31\n",
-       "150856    62\n",
-       "178782    27\n",
-       "278150    39\n",
-       "174048    22\n",
-       "16611     21\n",
-       "219379    23\n",
-       "69951     39\n",
-       "267273    59\n",
-       "85437     37\n",
-       "260618    64\n",
-       "226821    40\n",
-       "307264    22\n",
+       "189620    26\n",
+       "181219    72\n",
+       "158887    44\n",
+       "158970    54\n",
+       "297431    56\n",
+       "48721     45\n",
+       "255257    64\n",
+       "92881     49\n",
+       "307480    26\n",
+       "323090    26\n",
+       "266171    49\n",
+       "279516    29\n",
+       "21666     24\n",
+       "209809    46\n",
+       "119231    32\n",
+       "291623    35\n",
+       "218010    26\n",
+       "188622    44\n",
+       "176643    45\n",
+       "241558    55\n",
+       "111992    27\n",
+       "288271    50\n",
+       "120634    25\n",
+       "244879    27\n",
+       "107501    56\n",
+       "313282    28\n",
+       "197630    37\n",
+       "192691    22\n",
+       "137234    25\n",
+       "149401    75\n",
+       "59668     28\n",
+       "294049    36\n",
+       "159655    29\n",
+       "22393     25\n",
+       "324088    63\n",
+       "173538    53\n",
+       "179688    30\n",
+       "267385    39\n",
+       "315620    80\n",
+       "26285     73\n",
+       "197175    30\n",
+       "35178     50\n",
+       "227190    29\n",
+       "188306    40\n",
+       "88579     55\n",
+       "106709    27\n",
+       "75693     44\n",
+       "206666    23\n",
+       "215838    26\n",
+       "26449     52\n",
        "Name: Age, dtype: int32"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,17 +839,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "dc170c41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39.44"
+       "41.02"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,38 +861,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "c2de7c74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7515454932103864"
+       "0.828454506789619"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diff_btwn_means = mean_of_age - mean_of_sample\n",
+    "diff_btwn_means = mean_of_sample - mean_of_age\n",
     "diff_btwn_means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c6c315f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "percentage_error = (diff_btwn_means/ sum(age_calc))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "316d54a6-fd3d-4b0f-b0f5-d97b68edbcf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.3527938628688825e-06"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage_error"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
